--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
   background-color: #0c0c0c;
   color: #adff2f;
-  margin: 0px;
+  margin: 15px;
   height: 100%;
 }
 
@@ -36,6 +36,8 @@ h1 {
   background-color: #2e2e2e;
   color: greenyellow;
   padding: 10px;
+  font-family: "Orbitron", sans-serif;
+  letter-spacing: 3px;
 }
 .container textarea:focus {
   outline: none;
@@ -73,4 +75,20 @@ h1 {
     grid-template-columns: 1fr 1fr;
     grid-gap: 40px;
   }
+  textarea {
+    height: 25em;
+  }
+}
+::-webkit-scrollbar {
+  width: 7px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: #2e2e2e;
+  border-radius: 7px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: greenyellow;
 }/*# sourceMappingURL=style.css.map */
