--- a/style.scss
+++ b/style.scss
@@ -19,13 +19,14 @@ h1 {
     font-family: 'Geostar Fill', cursive;
     letter-spacing: 3px;
     margin-bottom: 30px;
+    font-size: 40px;
 }
 
 .container {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top: 40px;
 
     & h3 {
         text-align: center;
@@ -40,11 +41,18 @@ h1 {
         padding: 10px;
         font-family: 'Orbitron', sans-serif;
         letter-spacing: 3px;
+        font-size: 15px;
 
         &:focus {
             outline: none;
             border: 1px solid greenyellow;
         }
+    }
+
+    & .morsecode {
+        font-size: 20px;
+        font-weight: 600;
+        letter-spacing: 4px;
     }
 }
 
@@ -85,6 +93,10 @@ h1 {
 
     textarea {
         height: 25em;
+    }
+
+    .morsecode {
+        height: 18.75em;
     }
 }
 
